Trying to fix Prev/Next on mobile

--- a/style.css
+++ b/style.css
@@ -210,12 +210,18 @@ main::-webkit-scrollbar-thumb {
 footer {
     margin-top: 15px;
     flex-shrink: 0;
+    padding-bottom: max(10px, env(safe-area-inset-bottom));
+}
+
+.progress-info {
+    margin-top: 15px;
+    width: 100%;
 }
 
 .progress-container {
     height: 4px;
     background-color: #333;
-    margin-bottom: 10px;
+    margin-top: 5px;
     border-radius: 2px;
 }
 
